2007-06-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolbuilder.vala: fix current_symbol handling in
	  visit_property_accessor
	* vapigen/valagidlparser.vala: add missing NoArrayLength attribute,
	  support hiding signals
	* vapi/glib-2.0.vala: add GConnectFlags
	* vapi/packages/pango/pango.gidl, vapi/pango.vala: updated to
	  Pango 1.17.3
	* vapi/packages/gdk-2.0/gdk-2.0.gidl,
	  vapi/packages/gtk+-2.0/gtk+-2.0.gidl,
	  vapi/packages/gtk+-2.0/gtk+-2.0.metadata, vapi/gdk-2.0.vala,
	  vapi/gtk+-2.0.vala: updated to GTK+ 2.11.4, some small
	  GtkTreeModel/GtkTreeStore fixes

2007-06-15  Jürg Billeter  <j@bitron.ch>

	* vala/valaattributeprocessor.vala, vala/valacodevisitor.vala,
	  vala/valainterfacewriter.vala, vala/valamemorymanager.vala,
	  vala/valasemanticanalyzer.vala, vala/valasymbolbuilder.vala,
	  vala/valasymbolresolver.vala, vala/valaconstant.vala,
	  vala/valaconstructor.vala, vala/valacreationmethod.vala,
	  vala/valadestructor.vala, vala/valafield.vala,
	  vala/valaformalparameter.vala, vala/valamethod.vala,
	  vala/valaproperty.vala, vala/valapropertyaccessor.vala,
	  vala/valasignal.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratormethod.vala,
	  gobject/valacodegeneratorsignal.vala: move iteration of symbol nodes
	  from accept to accept_children method

2007-06-15  Jürg Billeter  <j@bitron.ch>

	* vala/valaattributeprocessor.vala, vala/valacodevisitor.vala,
	  vala/valainterfacewriter.vala, vala/valamemorymanager.vala,
	  vala/valaparser.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolbuilder.vala, vala/valasymbolresolver.vala,
	  vala/valacallback.vala, vala/valaclass.vala, vala/valaenum.vala,
	  vala/valaflags.vala, vala/valainterface.vala, vala/valastruct.vala,
	  gobject/valacodegenerator.class, gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratorinterface.vala,
	  gobject/valacodegeneratorstruct.vala: move iteration of data types
	  from accept to accept_children method
